force-app/main/default/objects/Lead_Strategy_Views__c/Lead_Strategy_Views__c.object-meta.xml
<CustomObject>
    <description>used to define views for Lead Strategy visual force page, see associated controller, trigger and test classes.  Waiting for official go ahead from Andy Roe. 5/22/2012</description>
    <label>Lead Strategy Views</label>
    <nameField>
        <displayFormat>view{000}</displayFormat>
        <label>View Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Strategy Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>