force-app/main/default/objects/Lead_Strategy_Views__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>notes and comments</inlineHelpText>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>