force-app/main/default/objects/Lead_Strategy_Views__c/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <defaultValue>100</defaultValue>
    <inlineHelpText>query result limit</inlineHelpText>
    <label>Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>