force-app/main/default/objects/Lead_Strategy_Views__c/fields/order_by__c.field-meta.xml
<CustomField>
    <fullName>order_by__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>fields to order query by</inlineHelpText>
    <label>Order By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>