force-app/main/default/objects/Lead_Strategy_Views__c/fields/page_size__c.field-meta.xml
<CustomField>
    <fullName>page_size__c</fullName>
    <defaultValue>25</defaultValue>
    <inlineHelpText>number of records displayed on each page</inlineHelpText>
    <label>page size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>