force-app/main/default/objects/Lead_Strategy_Views__c/fields/Parent_Fields__c.field-meta.xml
<CustomField>
    <fullName>Parent_Fields__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>api field names separated by , (no spaces please!)</inlineHelpText>
    <label>Parent Fields</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>