force-app/main/default/objects/Lead_Strategy_Views__c/fields/Show_Account_Teams__c.field-meta.xml
<CustomField>
    <fullName>Show_Account_Teams__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>show Prospect-Clients and Opptys where I am part of account team</inlineHelpText>
    <label>Show Account Teams</label>
    <type>Checkbox</type>
</CustomField>