force-app/main/default/objects/Lead_Strategy_Views__c/fields/Show_My_ZipCodes__c.field-meta.xml
<CustomField>
    <fullName>Show_My_ZipCodes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Show records within my zip codes even if I am not the owner. Can only be used with Account and Lead views.</inlineHelpText>
    <label>Show My ZipCodes</label>
    <type>Checkbox</type>
</CustomField>