force-app/main/default/objects/Lead_Strategy_Views__c/fields/SOQL__c.field-meta.xml
<CustomField>
    <fullName>SOQL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SOQL</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>