force-app/main/default/objects/Lead_Strategy_Views__c/fields/View_Name__c.field-meta.xml
<CustomField>
    <fullName>View_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>View Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>