force-app/main/default/objects/Lead_Strategy_Views__c/listViews/All_Views.listView-meta.xml
<ListView>
    <fullName>All_Views</fullName>
    <columns>NAME</columns>
    <columns>View_Name__c</columns>
    <columns>IsActive__c</columns>
    <columns>Parent_Object__c</columns>
    <columns>Child_Object__c</columns>
    <columns>Show_Account_Teams__c</columns>
    <columns>Show_My_ZipCodes__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Views</label>
</ListView>